src/charlie/manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: charlie-deployment
  labels:
    app: charlie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: charlie
  template:
    metadata:
      labels:
        app: charlie
    spec:
      containers:
        - name: charlie
          image: acrcloudengineer.azurecr.io/charlie
          resources:
            limits:
              memory: "64Mi"
              cpu: "100m"
          ports:
            - containerPort: 80
