src/charlie/manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: hello-guys.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              serviceName: charlie-service
              servicePort: 8080
